Add properly responses to tsoa swagger generator
