# docs/swagger.json
@@ -6,9 +6,11 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"HttpResponse_void_": {
+			"HttpResponse_string_": {
 				"properties": {
-					"payload": {},
+					"payload": {
+						"type": "string"
+					},
 					"statusCode": {
 						"type": "number",
 						"format": "double"
@@ -33,6 +35,73 @@
 				"required": [
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"TPost": {
+				"properties": {
+					"updated_at": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
+					},
+					"created_at": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
+					},
+					"dislikes": {
+						"type": "number",
+						"format": "double"
+					},
+					"likes": {
+						"type": "number",
+						"format": "double"
+					},
+					"content": {
+						"type": "string"
+					},
+					"creator_id": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"created_at",
+					"content",
+					"creator_id",
+					"id"
+				],
+				"type": "object"
+			},
+			"HttpResponse_TPost_": {
+				"properties": {
+					"payload": {
+						"$ref": "#/components/schemas/TPost"
+					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -96,9 +165,62 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"HttpResponse_any_": {
+			"FetchPostsOutput": {
 				"properties": {
-					"payload": {},
+					"creator": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"name",
+							"id"
+						],
+						"type": "object"
+					},
+					"updatedAt": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"dislikes": {
+						"type": "number",
+						"format": "double"
+					},
+					"likes": {
+						"type": "number",
+						"format": "double"
+					},
+					"content": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"creator",
+					"createdAt",
+					"dislikes",
+					"likes",
+					"content",
+					"id"
+				],
+				"type": "object"
+			},
+			"HttpResponse_FetchPostsOutput-Array_": {
+				"properties": {
+					"payload": {
+						"items": {
+							"$ref": "#/components/schemas/FetchPostsOutput"
+						},
+						"type": "array"
+					},
 					"statusCode": {
 						"type": "number",
 						"format": "double"
@@ -131,6 +253,63 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Pick_User.Exclude_keyofUser.password__": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"created_at": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
+					},
+					"role": {
+						"$ref": "#/components/schemas/USER_ROLES"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"email",
+					"created_at",
+					"role"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_User.password_": {
+				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.password__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"HttpResponse_Omit_User.password__": {
+				"properties": {
+					"payload": {
+						"$ref": "#/components/schemas/Omit_User.password_"
+					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"RegisterRequestBody": {
 				"properties": {
 					"name": {
@@ -147,6 +326,73 @@
 					"name",
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Post": {
+				"properties": {
+					"updated_at": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
+					},
+					"created_at": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
+					},
+					"dislikes": {
+						"type": "number",
+						"format": "double"
+					},
+					"likes": {
+						"type": "number",
+						"format": "double"
+					},
+					"content": {
+						"type": "string"
+					},
+					"creator_id": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"created_at",
+					"content",
+					"creator_id",
+					"id"
+				],
+				"type": "object"
+			},
+			"HttpResponse_Post_": {
+				"properties": {
+					"payload": {
+						"$ref": "#/components/schemas/Post"
+					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -193,7 +439,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
+									"$ref": "#/components/schemas/HttpResponse_string_"
 								}
 							}
 						}
@@ -222,7 +468,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
+									"$ref": "#/components/schemas/HttpResponse_TPost_"
 								}
 							}
 						}
@@ -249,7 +495,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_any_"
+									"$ref": "#/components/schemas/HttpResponse_FetchPostsOutput-Array_"
 								}
 							}
 						}
@@ -268,7 +514,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
+									"$ref": "#/components/schemas/HttpResponse_string_"
 								}
 							}
 						}
@@ -295,7 +541,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
+									"$ref": "#/components/schemas/HttpResponse_Post_"
 								}
 							}
 						}
@@ -319,15 +565,8 @@
 			"put": {
 				"operationId": "Execute",
 				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
-								}
-							}
-						}
+					"204": {
+						"description": "No content"
 					}
 				},
 				"security": [],
@@ -353,13 +592,10 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_void_"
+									"$ref": "#/components/schemas/HttpResponse_Omit_User.password__"
 								}
 							}
 						}
-					},
-					"201": {
-						"description": ""
 					}
 				},
 				"security": [],
